src/objects/Loan_Activity__c.object
<CustomObject>
    <description>Area to track things that happen to loans (i.e. Refi, Repay, etc.)</description>
    <fields>
        <fullName>Appraised_Fair_Market_Value__c</fullName>
        <label>Appraised/Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BEGIN_Lien_Amount__c</fullName>
        <inlineHelpText>Enter manually</inlineHelpText>
        <label>BEGIN Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.BMR_DALP_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR-DALP Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.BMR_Lien_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIA_Ratio__c</fullName>
        <label>CIA Ratio</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSLP_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.CSLP_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSLP Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Improvement_Amount_Claimed__c</fullName>
        <label>Capital Improvement Amount Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Improvement_Description__c</fullName>
        <label>Capital Improvement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capital_Improvement_No__c</fullName>
        <displayFormat>CI-{YYYY}-{0000}</displayFormat>
        <label>Capital Improvement #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cash_Out_Amount__c</fullName>
        <label>Cash Out Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Activities (Contact 1)</relationshipLabel>
        <relationshipName>Loan_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Activities (Contact 2)</relationshipLabel>
        <relationshipName>Loan_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Activities (Contact 3)</relationshipLabel>
        <relationshipName>Loan_Activities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_RMCC_Issue_Date__c</fullName>
        <label>Current RMCC Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_RMCC_Status__c</fullName>
        <label>Current RMCC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[select]</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_RMCC__c</fullName>
        <defaultValue>&quot;RMCC-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>Current RMCC #</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DALP_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.DALP_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DALP Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Payoff_Letter_Sent__c</fullName>
        <label>Date Payoff Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_RMCC_Application_Received__c</fullName>
        <label>Date RMCC Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Improvement_or_Purchase__c</fullName>
        <label>Date of Improvement or Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Payoff__c</fullName>
        <label>Date of Payoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Date__c</fullName>
        <formula>Financial_Application__r.Deed_of_Trust_Document_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deed of Trust Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Image_Page__c</fullName>
        <formula>Financial_Application__r.Deed_of_Trust_Document_Image_Page__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deed of Trust Document Image/Page #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Recorded_Date__c</fullName>
        <formula>Financial_Application__r.Deed_of_Trust_Document_Recorded_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deed of Trust Document Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Recorded__c</fullName>
        <formula>Financial_Application__r.Deed_of_Trust_Document_Recorded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deed of Trust Document Recorded #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Reel_Book__c</fullName>
        <formula>Financial_Application__r.Deed_of_Trust_Document_Reel_Book__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deed of Trust Document Reel/Book #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRDALP_Amount_Requested__c</fullName>
        <formula>Financial_Application__r.FRDALP_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FRDALP Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Application__c</fullName>
        <label>Financial Application</label>
        <referenceTo>Financial_Application__c</referenceTo>
        <relationshipLabel>Loan Activities</relationshipLabel>
        <relationshipName>Loan_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HOA_Special_Assessment_Amount__c</fullName>
        <label>HOA Special Assessment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Special_Assessment_Description__c</fullName>
        <label>HOA Special Assessment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HOA_Special_Assessment__c</fullName>
        <displayFormat>HOASA-{YYYY}-{0000}</displayFormat>
        <label>HOA Special Assessment #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Housing_DTI__c</fullName>
        <formula>Proposed_Monthly_Housing_Expenses__c /  Monthly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing DTI</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Include_RMCC__c</fullName>
        <label>Include RMCC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[select]</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTV_After_New_Loan__c</fullName>
        <formula>(New_Loan_Amount__c +  Total_CCSF_Liens_Amount__c) /  Refi_Appraised_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTV After New Loan</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Activity_Status__c</fullName>
        <label>Loan Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Closing_Date__c</fullName>
        <label>Loan Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_ID__c</fullName>
        <label>Loan ID#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Modification_Reason_Comments__c</fullName>
        <label>Loan Modification Reason / Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Interest_Rate__c</fullName>
        <label>New Interest Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Lender_Institution_Name__c</fullName>
        <label>New Lender Institution Name</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Loan_Amount__c</fullName>
        <label>New Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Loan_Term_Years__c</fullName>
        <label>New Loan Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Loan_Type__c</fullName>
        <label>New Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_1st_Position_Loan__c</fullName>
        <formula>Financial_Application__r.Amount_of_First_Mortgage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original 1st Position Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Certified_Indebtedness_Amt__c</fullName>
        <label>Original Certified Indebtedness Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_MCC__c</fullName>
        <label>Original MCC #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Expenses__c</fullName>
        <label>Other Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Lien_Amount__c</fullName>
        <inlineHelpText>Enter manually</inlineHelpText>
        <label>Other Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Lien_Description__c</fullName>
        <inlineHelpText>Enter name of lien if &quot;Other Lien&quot; is used</inlineHelpText>
        <label>Other Lien Description</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.PIC_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIC Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paydown_Amount__c</fullName>
        <label>Paydown Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Received__c</fullName>
        <label>Payoff Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Check_Date__c</fullName>
        <label>Payoff Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Check_Number__c</fullName>
        <label>Payoff Check #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Number__c</fullName>
        <label>Escrow #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Co_Officer_Email__c</fullName>
        <label>Escrow/Title Co. Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Co_Officer_FName__c</fullName>
        <label>Escrow/Title Co. Officer First Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Co_Officer_Fax__c</fullName>
        <label>Escrow/Title Co. Officer Fax #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Co_Officer_LName__c</fullName>
        <label>Escrow/Title Co. Officer Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Co_Officer_Phone__c</fullName>
        <label>Escrow/Title Co. Officer Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Company_Address__c</fullName>
        <label>Escrow/Title Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payoff_Escrow_Title_Company_Name__c</fullName>
        <label>Escrow/Title Company Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Mortgage_Assist_Share_Apprec_Amt__c</fullName>
        <label>Mortgage Assist Share Apprec Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Mortgage_Assistance_Amount__c</fullName>
        <label>Mortgage Assistance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Original_Purchase_Price__c</fullName>
        <formula>Financial_Application__r.Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Payment_Method__c</fullName>
        <label>Payoff Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cashier&apos;s Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payoff_Reconveyance_Comments__c</fullName>
        <label>Payoff/Reconveyance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payoff_Recorded_Deed_of_Trust_Doc_Date__c</fullName>
        <label>Recorded Deed of Trust Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Share_Appreciation_Amount__c</fullName>
        <label>Share Appreciation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Trustee_First_Name__c</fullName>
        <label>Trustee First Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Date__c</fullName>
        <label>Preliminary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Number__c</fullName>
        <label>Preliminary Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Monthly_Housing_Expenses__c</fullName>
        <label>Present Monthly Housing Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Lender_Institution_Name__c</fullName>
        <label>Previous Lender Institution Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Lender__c</fullName>
        <formula>Financial_Application__r.Lender_Mortgage_Broker_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Lender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_RMCC_Issue_Date__c</fullName>
        <label>Previous RMCC Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_RMCC__c</fullName>
        <label>Previous RMCC #</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Amount__c</fullName>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Monthly_Housing_Expenses__c</fullName>
        <label>Proposed Monthly Housing Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Loan__c</fullName>
        <label>Purpose of Loan</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMCC_Credit_Percent__c</fullName>
        <label>RMCC Credit %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reconveyance_Doc_Image_Page_Number__c</fullName>
        <label>Reconveyance Doc Image/Page #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconveyance_Doc_Recorded_Date__c</fullName>
        <label>Reconveyance Doc Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconveyance_Doc_Reel_Book_Number__c</fullName>
        <label>Reconveyance Doc Reel/Book #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconveyance_Document_Date__c</fullName>
        <label>Reconveyance Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reconveyance_Document_Recorded_Number__c</fullName>
        <label>Reconveyance Document Recorded #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refi_Appraised_Value__c</fullName>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refi_Existing_1st_Mortgage_Payoff_Amount__c</fullName>
        <label>Existing First Mortgage Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refi_Oustanding_1st_Mort_Principal_Amt__c</fullName>
        <label>Oustanding First Mortgage Principal Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Comments__c</fullName>
        <label>Refi/Subord. Agreement Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Doc_Date__c</fullName>
        <label>Refi/Subord. Agreement Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Doc_Image_Page_No__c</fullName>
        <label>Refi/Subord. Agreement Doc Image/Page No</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Doc_Recorded_Date__c</fullName>
        <label>Refi/Subord. Agreement Doc Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Doc_Recorded_No__c</fullName>
        <label>Refi/Subord. Agreement Doc Recorded No.</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refi_Subord_Agreement_Doc_Reel_Book_No__c</fullName>
        <label>Refi/Subord. Agreement Doc Reel/Book No.</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resale_Price__c</fullName>
        <label>Resale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFRA_Lien_Amount__c</fullName>
        <inlineHelpText>Enter manually</inlineHelpText>
        <label>SFRA Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_1__c</fullName>
        <formula>Contact_1__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_2__c</fullName>
        <formula>Contact_2__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_3__c</fullName>
        <formula>Contact_3__r.Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TND_Lien_Amount__c</fullName>
        <formula>Financial_Application__r.TND_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TND Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_CCSF_Liens_Amount__c</fullName>
        <formula>Financial_Application__r.Total_Amount_Requested_from_CCSF__c + Financial_Application__r.BMR_Lien_Amount__c + SFRA_Lien_Amount__c + BEGIN_Lien_Amount__c + Other_Lien_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCSF Liens Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DTI__c</fullName>
        <formula>(Proposed_Monthly_Housing_Expenses__c +  Other_Expenses__c) /  Monthly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total DTI</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Payoff_Amount__c</fullName>
        <label>Total Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name__c</fullName>
        <label>Trustee Last Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Name__c</fullName>
        <formula>Financial_Application__r.Trustee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trustee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee__c</fullName>
        <label>Trustee</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Loan_if_Other__c</fullName>
        <label>Type of Loan if Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contractor_Name__c</fullName>
        <label>Vendor/Contractor Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Loan Activity</label>
    <nameField>
        <displayFormat>LA-{YY}-{000000}</displayFormat>
        <label>Loan Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Activities</pluralLabel>
    <recordTypes>
        <fullName>Capital_Improvements</fullName>
        <active>true</active>
        <label>Capital Improvements</label>
    </recordTypes>
    <recordTypes>
        <fullName>HOA_Special_Assessments</fullName>
        <active>true</active>
        <label>HOA Special Assessments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Initial_Loan</fullName>
        <active>true</active>
        <label>Initial Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Modification</fullName>
        <active>true</active>
        <label>Loan Modification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payoff_Reconveyance</fullName>
        <active>true</active>
        <label>Payoff/Reconveyance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refinance_Subordination</fullName>
        <active>true</active>
        <label>Refinance/Subordination</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>